@@ -24,7 +24,7 @@
 			<B>{t}Login:{/t}</B>
 		</TD>
 		<TD width="98%" class="frightu">
-			<input name="account[login]" value="{$account.login}" {tip text="Enter account name" trigger="login"} onkeyup="update_homedir();">
+			<input type="text" name="account[login]" value="{$account.login}" {tip text="Enter account name" trigger="login"} onkeyup="update_homedir();">
 		</TD>
 	</TR>
 	<TR class="light">
